--- a/CRM/CRM/CRM.csproj
+++ b/CRM/CRM/CRM.csproj
@@ -47,6 +47,7 @@
     <Compile Include="OsobaKontakt.cs" />
     <Compile Include="Pracownicy.cs" />
     <Compile Include="Pracownik.cs" />
+    <Compile Include="Produkt.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
