--- a/CRM/CRM/CRM.csproj
+++ b/CRM/CRM/CRM.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActionNotFoundException.cs" />
     <Compile Include="Dzialanie.cs" />
+    <Compile Include="Klient.cs" />
     <Compile Include="Konkurent.cs" />
     <Compile Include="Organizacja.cs" />
     <Compile Include="Osoba.cs" />
