--- a/CRM/CRM/CRM.csproj
+++ b/CRM/CRM/CRM.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="ActionNotFoundException.cs" />
     <Compile Include="Dzialanie.cs" />
+    <Compile Include="ITworzyUmowy.cs" />
     <Compile Include="Klient.cs" />
     <Compile Include="Konkurent.cs" />
     <Compile Include="NonOrganizationMemberException.cs" />
@@ -53,9 +54,11 @@
     <Compile Include="OsobaKontakt.cs" />
     <Compile Include="Pracownicy.cs" />
     <Compile Include="Pracownik.cs" />
+    <Compile Include="ProductNotFoundException.cs" />
     <Compile Include="Produkt.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Umowa.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
