Część dokumentacji klasy OrgProwadzacaCRM
+ baza do testów jednostkowych tej klasy

--- a/CRM/TestyJednostkowe/TestyJednostkowe.csproj
+++ b/CRM/TestyJednostkowe/TestyJednostkowe.csproj
@@ -49,11 +49,18 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TestyOrgProwadzacaCRM.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CRM\CRM.csproj">
+      <Project>{78ABE059-EA1B-4124-A2BB-7059428A754E}</Project>
+      <Name>CRM</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
