--- a/CRM/CRM_GUI/CRM_GUI.csproj
+++ b/CRM/CRM_GUI/CRM_GUI.csproj
@@ -55,6 +55,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="DzialaniaWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="KlienciWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -71,6 +75,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="DzialaniaWindow.xaml.cs">
+      <DependentUpon>DzialaniaWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="KlienciWindow.xaml.cs">
       <DependentUpon>KlienciWindow.xaml</DependentUpon>
     </Compile>
@@ -81,6 +88,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="OsobyKontaktoweWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="PracownicyWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -91,6 +102,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OsobyKontaktoweWindow.xaml.cs">
+      <DependentUpon>OsobyKontaktoweWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PracownicyWindow.xaml.cs">
       <DependentUpon>PracownicyWindow.xaml</DependentUpon>
     </Compile>
