--- a/CRM/CRM_GUI/CRM_GUI.csproj
+++ b/CRM/CRM_GUI/CRM_GUI.csproj
@@ -59,6 +59,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="DzialanieWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="KlienciWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -86,6 +90,9 @@
     <Compile Include="DzialaniaWindow.xaml.cs">
       <DependentUpon>DzialaniaWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="DzialanieWindow.xaml.cs">
+      <DependentUpon>DzialanieWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="KlienciWindow.xaml.cs">
       <DependentUpon>KlienciWindow.xaml</DependentUpon>
     </Compile>
@@ -102,6 +109,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="OsobaKontaktowaWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="OsobyKontaktoweWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -116,6 +127,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OsobaKontaktowaWindow.xaml.cs">
+      <DependentUpon>OsobaKontaktowaWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="OsobyKontaktoweWindow.xaml.cs">
       <DependentUpon>OsobyKontaktoweWindow.xaml</DependentUpon>
     </Compile>
