Okna UmowyWindow i UmowaWindow

--- a/CRM/CRM_GUI/CRM_GUI.csproj
+++ b/CRM/CRM_GUI/CRM_GUI.csproj
@@ -55,6 +55,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="UmowaWindow.xaml.cs">
+      <DependentUpon>UmowaWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UmowyWindow.xaml.cs">
+      <DependentUpon>UmowyWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="DzialaniaWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -130,6 +136,14 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="ProduktyWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UmowaWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UmowyWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
